--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "license": "GPL-3.0-or-later",
   "homepage": "https://github.com/ioncode/TallCom",
   "version": "0.0.1",
+  "type": "project",
   "authors": [
     {
       "name": "Andrey Ponteleev",
@@ -13,6 +14,15 @@
       "role": "Developer"
     }
   ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/swoole/docker-swoole.git"
+    }
+  ],
   "require": {
+  },
+  "require-dev": {
+    "swoole/docker": "dev-master"
   }
 }
